# Coding-agent

./: .gitignore  README.md  environment.yml  pyproject.toml
src/code_assistant/: __init__.py  config.py  planner.py  session.py
src/code_assistant/tools/: shell_tools.py
src/code_assistant_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_completion.py  test_planner.py  test_session.py
