[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-assistant-cli"
version = "0.1.0"
description = "A clean-room Python CLI MVP for a code assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.7,<3.0",
  "prompt-toolkit>=3.0.47,<4.0",
]

[project.scripts]
code-assistant = "code_assistant.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
